👽 fix spacing issues on miro desktop app

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -79,3 +79,7 @@ a:active.muted {
 .scrollable {
   overflow-y: auto;
 }
+
+span.emoji {
+  letter-spacing: 0.5em;
+}
